src/index.css
/* ... */
.color-grade-2 {
  --grade-color: var(--dot-grade-2-color);
  --grade-color-bright: var(--dot-grade-2-color-bright);
}

.color-grade-1 {
  --grade-color: var(--dot-grade-1-color);
  --grade-color-bright: var(--dot-grade-1-color-bright);
}

.color-normal {
  --grade-color: var(--dot-normal-color);
  --grade-color-bright: var(--dot-normal-color-bright);
}

.color-high-normal {
  --grade-color: var(--dot-high-normal-color);
  --grade-color-bright: var(--dot-high-normal-color-bright);
}

.color-low {
  --grade-color: var(--dot-low-color);
  --grade-color-bright: var(--dot-low-color);
}

.color-out {
  --grade-color: var(--dot-out-color);
  --grade-color-bright: var(--dot-out-color);
}

.color-unset {
  --grade-color: var(--dot-unset-color);
  --grade-color-bright: var(--dot-unset-color-bright);
}

.main {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 100%;
  gap: var(--block-gap) var(--block-gap);
  min-width: calc(var(--reading-list-width) + var(--block-gap) + var(--last-week-min-width) + 2 * var(--main-padding));
  overflow: hidden;
  position: relative;
}

/**/

.addReadingWrapper,
.readingListWrapper,
.graphWrapper,
.lastWeekWrapper {
  box-sizing: border-box;
  border-radius: 0.5rem;
}

.addReadingWrapper,
.graphWrapper,
.lastWeekWrapper {
  padding: var(--block-padding);
}

.readingListWrapper,
.graphWrapper,
.lastWeekWrapper {
  background-color: var(--main-color);
}

.addReadingWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
  min-height: var(--add-reading-height);
  max-width: calc(var(--reading-list-width) - var(--block-gap));

  & > button {
    font-size: 0.8rem;
  }
}

.readingListWrapper {
  font-size: 0.9rem;
  overflow: auto;
  display: flex;
  flex-direction: column;
  scrollbar-width: thin;
  flex-basis: calc(100% - var(--add-reading-height) - var(--block-gap));
  width: var(--reading-list-width);

}

.graphWrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  width: calc(100% - var(--reading-list-width) - var(--block-gap));
  flex-basis: calc(100% - var(--last-week-height) - var(--block-gap));
  min-width: var(--last-week-min-width);

}

.lastWeekWrapper {
  display: flex;
  gap: var(--last-week-gap);
  flex-basis: var(--last-week-height);
  max-width: var(--last-week-max-width);
  width: calc(100% - var(--reading-list-width) - var(--block-gap));
  min-width: var(--last-week-min-width);

  container-type: inline-size;
  container-name: lastWeekWrapper;
}

.dropdownMenuWrapper {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.dropdownMenu {
  position: absolute;
  top: 70%;
  left: 70%;
  width: 17rem;
  background: gray;
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  padding: 0.2rem;
  border-radius: 0.6rem;
  z-index: 10;
}

.dropdownMenuButton {
  display: contents;
  background-color: transparent;
  border: none;
  cursor: pointer;
  user-select: none;
}

.dropdownMenuOverlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.dropdownMenuItem {
  height: 3rem;
  z-index: 10;
}

.dropdownMenuItemButton {
  width: 100%;
  height: 100%;
}

.dropdownMenuIcon {
  fill: var(--dot-unset-color);
  height: 100%;
  width: 100%;
}

.weekDay {
  font-size: min(calc(3cqi + 2px), 1.3rem);

  box-shadow: 0 0 0 1px oklch(from var(--main-color) calc(l + 0.14) c h);
  min-height: var(--day-height);
  border-radius: 0.5rem;
  flex-shrink: 1;
  flex-basis: var(--day-width);

  grid-template-rows: 1fr 2fr;
  grid-template-columns: 1fr;

  min-width: var(--day-min-width);
  overflow: hidden;
  display: grid;
  place-items: center;

  svg {
    width: 80%;
    height: 80%;
  }
}

/*600*/
@media (max-width: 815px) {
  :root {
    --add-reading-width: 12rem;
    --add-reading-height: var(--last-week-height);
    --last-week-height: calc(100% - 15% - var(--block-gap));
    --day-min-width: 1.5rem;
    --main-padding: 0.5rem;
    --block-gap: 0.5rem;
    --graph-height: 45vh;
    --block-padding: 0.3rem;
  }

  .main {
    flex-direction: row;
    min-width: 340px;
    height: 100%;
  }

  .graphWrapper {
    order: 1;
    flex-basis: 100%;
    height: var(--graph-height);
  }

  .addReadingWrapper {
    order: 2;
    flex-basis: 15%;
    min-width: 3rem;
    flex-shrink: 1;
    height: calc(var(--day-height) + 2 * var(--block-padding));

  }

  .lastWeekWrapper {
    order: 3;
    flex-basis: calc(100% - 15% - var(--block-gap));
    flex-shrink: 1;
  }

  .readingListWrapper {
    order: 4;
    flex-basis: 100%;
    min-height: calc(100vh - var(--graph-height) - var(--header-height) - var(--footer-height) - 2 * var(--main-padding) - var(--day-height) - 2 * var(--block-gap) - 2 * var(--block-padding));
  }

  .weekDay {
    height: var(--day-height);
  }

  .dropdownMenu {
    position: fixed;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

/**/

.readingListItem {
  --bg-main-color: var(--main-color);
  display: grid;
  grid-template-columns: 1fr calc(var(--control-button-size) * 2 + var(--control-divider-width));
  grid-template-rows: 1fr;
  gap: calc(var(--block-gap) * 2);
  padding: var(--block-padding) calc(var(--block-padding) * 2);
  cursor: pointer;
  user-select: none;
  transition: all 0.3s ease-in-out;
  min-height: 2.7rem;
  /*background: linear-gradient(135deg, var(--grade-color), var(--bg-main-color) 3rem);*/
  background: radial-gradient(circle at 0% 50%, var(--grade-color) 0.5rem, var(--bg-main-color) 0rem);
}

.readingListItem:not(:last-child) {
  box-shadow: inset 0 -1px 0 0 oklch(from var(--main-color) calc(l + 0.14) c h);
}

.readingListItem.selected {
  --bg-main-color: black;
  font-weight: bold;
  min-height: 3.5rem;

  .readingListItemControlButton {
    opacity: 1;
  }
}

.readingListItemData {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
/* ... */

